// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Snapshots matches snapshot for default state 1`] = `
<div
  style="padding: 40px 20px; text-align: center;"
>
  <div
    class="css-dev-only-do-not-override-l9pxc0 ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
      style="height: 60px; margin-bottom: 16px;"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          No data
        </title>
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div>
        <div
          style="font-size: 16px; font-weight: 500; margin-bottom: 8px;"
        >
          暂无数据
        </div>
        <div
          style="color: rgb(153, 153, 153); font-size: 14px;"
        >
          当前没有任何数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots matches snapshot for error state 1`] = `
<div
  style="padding: 40px 20px; text-align: center;"
>
  <div
    class="css-dev-only-do-not-override-l9pxc0 ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
      style="height: 60px; margin-bottom: 16px;"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          No data
        </title>
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div>
        <div
          style="font-size: 16px; font-weight: 500; margin-bottom: 8px;"
        >
          加载失败
        </div>
        <div
          style="color: rgb(153, 153, 153); font-size: 14px;"
        >
          数据加载出现问题，请稍后重试
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots matches snapshot for search state 1`] = `
<div
  style="padding: 40px 20px; text-align: center;"
>
  <div
    class="css-dev-only-do-not-override-l9pxc0 ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
      style="height: 60px; margin-bottom: 16px;"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          No data
        </title>
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div>
        <div
          style="font-size: 16px; font-weight: 500; margin-bottom: 8px;"
        >
          没有找到相关内容
        </div>
        <div
          style="color: rgb(153, 153, 153); font-size: 14px;"
        >
          请尝试调整搜索条件或关键词
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots matches snapshot with actions 1`] = `
<div
  style="padding: 40px 20px; text-align: center;"
>
  <div
    class="css-dev-only-do-not-override-l9pxc0 ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
      style="height: 60px; margin-bottom: 16px;"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          No data
        </title>
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div>
        <div
          style="font-size: 16px; font-weight: 500; margin-bottom: 8px;"
        >
          暂无数据
        </div>
        <div
          style="color: rgb(153, 153, 153); font-size: 14px;"
        >
          当前没有任何数据
        </div>
      </div>
    </div>
    <div
      class="ant-empty-footer"
    >
      <div
        class="ant-space css-dev-only-do-not-override-l9pxc0 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            type="button"
          >
            <span>
              重 置
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              添 加
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
